server/k8s/production/gigbox-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: gigbox-server
  labels:
      app: gigbox-server
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
      app: gigbox-server
      tier: server
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gigbox-server
  labels:
    app: gigbox-server
    tier: server
spec:
  replicas: 1
  selector:
    matchLabels:
        app: gigbox-server
  strategy:
    type: Recreate
  template:
    metadata:
        labels: 
            app: gigbox-server
            tier: server
    spec:
      containers:
        - image: gigbox/gigbox-server:latest
          name: gigbox-server
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /opt/data
              name: server-data
      restartPolicy: Always
      volumes:
        - name: server-data
          persistentVolumeClaim:
            claimName: server-data-claim-prod
